package com.example.ttbback.entity;


import lombok.AllArgsConstructor;
import lombok.Data;
import lombok.NoArgsConstructor;
import org.hibernate.annotations.GenericGenerator;
import org.springframework.beans.factory.annotation.Autowired;

import javax.persistence.*;
import java.util.ArrayList;
import java.util.List;
import java.util.UUID;


@Data
@AllArgsConstructor
@NoArgsConstructor
@Entity
public class Product {
    @Id
    @GeneratedValue(generator = "uuid2")
    @GenericGenerator(name = "uuid2", strategy = "org.hibernate.id.UUIDGenerator")
    private UUID id;
    private String label;
    private int idbakery;
    private int weight;
    private int price;
    @OneToMany
    private List<Ingredient> ingredients = new ArrayList<>();
    private int product_quantity;
    @OneToMany
    private List<Comment> comments = new ArrayList<>();



}